--- a/src/ExchangeRateAPI/ExchangeRate/ExchangeRate.Providers.CurrencyLayer/ExchangeRate.Providers.CurrencyLayer.csproj
+++ b/src/ExchangeRateAPI/ExchangeRate/ExchangeRate.Providers.CurrencyLayer/ExchangeRate.Providers.CurrencyLayer.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Refit" Version="7.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExchangeRate.Providers\ExchangeRate.Providers.csproj" />
   </ItemGroup>
 
