--- a/src/ExchangeRateAPI/ExchangeRate/ExchangeRate.API/appsettings.json
+++ b/src/ExchangeRateAPI/ExchangeRate/ExchangeRate.API/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "CurrencyLayer": {
+        "BaseUrl": "http://api.currencylayer.com",
+        "AccessKey": "ACCESS_KEY"
     }
-  },
-  "AllowedHosts": "*"
 }
